<resources>
    <string name="app_name" translatable="false">Orgs</string>

    <string name="text_logo_orgs">Logo do app Orgs</string>
    <string name="text_bem_vindo">Bem-vindo(a) ao Orgs</string>
    <string name="text_bem_vindo_de_volta">Bem-vindo(a) de volta</string>
    <string name="text_explore_pelos_melhores_produtos">Explore pelos melhores produtores orgânicos.</string>
    <string name="text_preencha_as_informacoes">Preencha as informações abaixo</string>
...
