<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_detalhes_produto_editar"
            android:title="@string/text_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_editar_action"
            app:showAsAction="ifRoom"
    />
    <item
            android:id="@+id/menu_detalhes_produto_remover"
            android:title="@string/text_remover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_remove_action"
            app:showAsAction="ifRoom"
    />
</menu>